--- a/oscn-dockets-processor.opam
+++ b/oscn-dockets-processor.opam
@@ -16,6 +16,8 @@ depends: [
   "ocaml" {>= "4.08.1"}
   "dune" {build & >= "1.9.0"}
 
+  "alcotest-lwt" { = "1.1.0" }
+
   "core_kernel" { >= "v0.13.0" & < "v0.14.0" }
   "re2" { >= "v0.13.0" & < "v0.14.0" }
   "lwt" { >= "5.2.0" & < "6.0.0" }
