--- a/oscn-dockets-processor.opam
+++ b/oscn-dockets-processor.opam
@@ -18,7 +18,7 @@ depends: [
 
   "alcotest-lwt" { = "1.1.0" }
 
-  "core_kernel" { >= "v0.13.0" & < "v0.14.0" }
+  "core" { >= "v0.13.0" & < "v0.14.0" }
   "re2" { >= "v0.13.0" & < "v0.14.0" }
   "lwt" { >= "5.2.0" & < "6.0.0" }
   "lwt_ppx" { >= "2.0.1" & < "3.0.0" }
