--- a/oscn-dockets-processor.opam
+++ b/oscn-dockets-processor.opam
@@ -12,9 +12,6 @@ tags: []
 homepage: "https://github.com/AyOK-Code/oscn-dockets-processor"
 doc: "https://github.com/AyOK-Code/oscn-dockets-processor"
 bug-reports: "https://github.com/AyOK-Code/oscn-dockets-processor/issues"
-pin-depends: [
-  [ "tls.0.12.0.custom" "git+https://github.com/mirleft/ocaml-tls.git#5e967cbf78aea778934e7ed9ec9ab7482326b352" ]
-]
 depends: [
   "ocaml" {>= "4.08.1"}
   "dune" {build & >= "1.9.0"}
@@ -31,7 +28,7 @@ depends: [
 
   "cohttp" { = "2.5.1" }
   "cohttp-lwt-unix" { = "2.5.1" }
-  "tls" { = "0.12.0.custom" }
+  "tls" { >= "0.12.3" }
 
   "ppx_deriving" { >= "4.4.1" & < "5.0.0" }
   "ppx_deriving_yojson" { >= "3.5.2" & < "4.0.0" }
