--- a/oscn-dockets-processor.opam
+++ b/oscn-dockets-processor.opam
@@ -15,6 +15,8 @@ bug-reports: "https://github.com/AyOK-Code/oscn-dockets-processor/issues"
 depends: [
   "ocaml" {= "4.10.0"}
   "dune" {build & >= "1.9.0"}
+  "ocaml-lsp-server"
+  "ocamlformat" { = "0.15.0" }
 
   "alcotest-lwt" { = "1.1.0" }
 
@@ -22,7 +24,6 @@ depends: [
   "re2" { >= "v0.13.0" & < "v0.14.0" }
   "lwt" { >= "5.2.0" & < "6.0.0" }
   "lwt_ppx" { >= "2.0.1" & < "3.0.0" }
-  "utop"
 
   "lambdasoup" { = "0.7.1" }
 
